--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,100 +1,87 @@
 body {
-    margin: 0 auto;
-    padding: 0;
     background-image: url(../images/dust_scratches.png);
-    font-family: Arial, Helvetica, sans-serif;
-    color: #777777;
 }
 
-header {
+.name-header {
     background-color: #ffffff;
     border-bottom: solid 2px #dddddd;
+    min-height: 75px;
+
 }
-
-
-.header-content {
-    max-width: 960px;
-    margin: 0 auto;
+.about p {
+    padding-top: 10px;
+}
+ul.list-inline {
+    text-align: center;
+    padding-top: 25px;
+}
+@media(min-width: 768px) {
+    ul.list-inline {
+        text-align: right;
     }
-
-nav {
-    float: right;
-    margin-top: 15px;
 }
 
-nav ul {
-    list-style-type: none;
+.caption p {
+    padding-top: 10px;
 }
-
 
 li {
-    float: left;
     border-right: solid 1px #666666;
     color: #777777;
-    padding: 0px 10px;
+    padding: 0px 10px 0px 0px;
+    text-align: right;
 }
 
-nav li:last-child{
+
+li:last-child{
     border-right: none;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-    padding: 15px 15px;
-}
-
-a:link { 
-    color: black; 
-}
-
-a:visited { 
-    color: #777777; 
-}
-
-a:hover {
-     color: #4aaaa5; 
-}
-
-a:active {
-     color: black; 
-}
-
-h1 {
-    margin: 0;
-    padding: 15px;
+.name {
     background-color: #4aaaa5;
-    display: inline-block;
     color: #fff;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+    min-height: 75px;
+    margin-bottom: 0;
+    padding-top: 10px;
+
+
 }
 
-h2 {
-    margin: 10px 0 10px 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+
+.thumbnail {
+    position: relative;
 }
 
-.bio-image {
-    width: 300px;
-    height: 300px;
-    margin: 15px 15px 15px 0;
-    float: left;
+img {
+    padding-top: 10px;
+
+}
+
+.caption {
+    position: absolute;
+    top: 75%;
+    left: 0;
+    width: 100%;
+    background-color: #4aaaa5;
+    color: #ffffff;
+    font-size: 20px;
 }
 
 .page-name {
-    background-color: #ffffff;
     color: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
     height: 85px;
-    line-height: 70px;
     border-bottom: 2px #dddddd solid;
-    font-size: 20px;
+    padding-top: 20px;
+     
+
 }
 
 
 section {
     background-color: #ffffff;
-    width: 960px;
     margin: 0 auto;
     margin-top: 45px;
     border-style: solid;
@@ -105,11 +92,6 @@ section {
     box-sizing: border-box;
 }
 
-.footer,
- .push
-{
-    height: 72px;
-}
 
 footer {
     width: 100%;
@@ -121,22 +103,10 @@ footer {
 }
 
 
-.portfolio-img {
-    width: 300px;
-    height: 300px;
-}
 
-.img-box {
-    position: absolute;
-    margin: 0;
-    padding: 15px;
-    background-color: #4aaaa5;
-    display: inline-block;
-    color: #fff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    bottom: 20px;
-    width: 270px;
-    text-align: center;
+
+i {
+    padding: 10px 10px;
 }
 
 .a1 {
