Added links for social sites and new hangman picture.'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,18 @@ ul.list-inline {
     }
 }
 
+.github{
+    color: black;
+}
+
+.linkedIn {
+    color: #327ab1;
+}
+
+.stackOverFlow {
+    color: #f3a73c;
+}
+
 .caption p {
     padding-top: 10px;
 }
