--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,9 +27,9 @@ ul.list-inline {
     font-size: 70px;
 }
 
-.github:hover{
+.github:hover, .linkedIn:hover, .stackOverFlow:hover {
     text-decoration: none;
-
+    color: grey;
 }
 
 .linkedIn {
@@ -37,19 +37,10 @@ ul.list-inline {
     font-size: 70px;
 }   
 
-.linkedIn:hover {
-    text-decoration: none;
-
-}
 
 .stackOverFlow {
     color: #f3a73c;
     font-size: 70px;
-}
-
-.stackOverFlow:hover {
-    text-decoration: none;
-
 }
 
 .caption p {
